@@ -61,7 +61,6 @@ public class VideoDiaryServiceImpl implements VideoDiaryService {
             throw new CounselorPostVideoDiaryException();
         VideoDiary videoDiary = dto.toEntity();
         videoDiary.setUser(user);
-        System.out.println(videoDiary.getRealFileName());
         String[] text = videoSTT(videoDiary.getRealFileName());
         videoDiary.setContents(text[0]);
         videoDiary.setSentiment(text[1]);
@@ -150,16 +149,21 @@ public class VideoDiaryServiceImpl implements VideoDiaryService {
         //서버에서 실행시킬 때
 
         String filePath = "/home/ubuntu/docker-volume/video/" + path + "/" + path;
-        String s;
-        Process p;
+
         try{
-            String[] cmd = {"/bin/sh", "-c", "ffmpeg -i " + filePath + ".mp4 " + filePath + ".mp3"};
-            p = Runtime.getRuntime().exec(cmd);
-            BufferedReader br = new BufferedReader(new InputStreamReader(p.getInputStream()));
-            while ((s = br.readLine()) != null)
-                System.out.println(s);
-            p.waitFor();
-            p.destroy();
+            String[] command = new String[] {"bash","-c", "ffmpeg -i " + filePath + ".mp4 " + filePath + ".mp3"};
+            ProcessBuilder processBuilder = new ProcessBuilder(command);
+            Process process = processBuilder.start();
+
+            BufferedReader reader =
+                    new BufferedReader(new InputStreamReader(process.getInputStream()));
+
+            String line;
+            while ((line = reader.readLine()) != null) {
+                System.out.println(line);
+            }
+
+            int exitCode = process.waitFor();
         }catch (Exception e){
             e.printStackTrace();
         }
